--- a/20240703_correlation2.ipynb
+++ b/20240703_correlation2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,15 @@
     "            r2 = r2_score(y, y_pred)\n",
     "            r2_matrix.loc[var, dependent_var] = r2\n",
     "        else:\n",
-    "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n",
-    "\n",
+    "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# r2_matrix를 CSV 파일로 저장\n",
     "output_file_path = '20240703_r2_matrix.csv'  # 저장할 파일 경로\n",
     "r2_matrix.to_csv(output_file_path)\n",
@@ -97,7 +104,8 @@
     "    # 그래프 이미지 파일로 저장\n",
     "    img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
     "    plt.savefig(img_filename)\n",
-    "    plt.close()"
+    "    plt.close()\n",
+    "    "
    ]
   }
  ],
