--- a/20240703_linear.ipynb
+++ b/20240703_linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "import re\n",
     "\n",
     "# CSV 파일에서 데이터 로드\n",
-    "file_path = '20240703_correlation.csv'\n",
+    "file_path = '20240703_correlation_copy.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# 열 목록\n",
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# r2_matrix를 CSV 파일로 저장\n",
-    "output_file_path = '20240703_r2_matrix.csv'  # 저장할 파일 경로\n",
+    "output_file_path = '20240703_linear_r2.csv'  # 저장할 파일 경로\n",
     "r2_matrix.to_csv(output_file_path)\n",
     "\n",
     "# R^2 값이 0.9 이상인 모델 찾기\n",
