--- a/20240710_quadratic.ipynb
+++ b/20240710_quadratic.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score \n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "\n",
