--- a/20240710_quadratic.ipynb
+++ b/20240710_quadratic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_absolute_error as MAE\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.08999754346353524\n"
+     ]
+    }
+   ],
    "source": [
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
     "row = high_r2_models.iloc[12]\n",
@@ -143,6 +151,10 @@
     "model = LinearRegression()\n",
     "model.fit(X_poly, y)\n",
     "y_pred = model.predict(X_poly)\n",
+    "\n",
+    "# Convert it to kcal/mole\n",
+    "mae = MAE(y, y_pred)\n",
+    "print(f'MAE: {mae}')\n",
     "\n",
     "# 실제 값과 예측치 저장\n",
     "result_df = pd.DataFrame({\n",
