--- a/20240710_quadratic.ipynb
+++ b/20240710_quadratic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,27 +106,31 @@
     "plt.scatter(X, y, color='red', alpha=0.5)\n",
     "plt.xlabel(f'{independent_var}')\n",
     "plt.ylabel(f'{dependent_var}')\n",
-    "plt.title(f'Correlation between {independent_var}__{dependent_var}')\n",
+    "plt.title(f'Quadratic Correlation: {independent_var}__{dependent_var}')\n",
     "\n",
-    "# R^2 값 그래프에 추가\n",
+    "# R^2, MAE 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
     "# 그래프 이미지 파일로 저장\n",
-    "img_filename = sanitize_filename(f'Correlation between {independent_var}__{dependent_var}.png')\n",
+    "img_filename = sanitize_filename(f'Quadratic Correlation between {independent_var}__{dependent_var}.png')\n",
     "plt.savefig(img_filename)\n",
     "plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 0.08999754346353524\n"
+      "MAE: 2.0753433522689693 (kcal/mol)\n"
      ]
     }
    ],
@@ -153,18 +157,14 @@
     "y_pred = model.predict(X_poly)\n",
     "\n",
     "# Convert it to kcal/mole\n",
-    "mae = MAE(y, y_pred)\n",
-    "print(f'MAE: {mae}')\n",
+    "mae = MAE(y, y_pred)*23.06\n",
+    "print(f'MAE: {mae} (kcal/mol)')\n",
     "\n",
     "# 실제 값과 예측치 저장\n",
     "result_df = pd.DataFrame({\n",
     "    'Real': y,\n",
     "    'Predict': y_pred\n",
     "})\n",
-    "\n",
-    "# 파일 이름에서 유효하지 않은 문자 제거\n",
-    "def sanitize_filename(filename):\n",
-    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
     "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
     "result_df.to_csv(csv_filename, index=False)\n",
@@ -179,6 +179,7 @@
     "\n",
     "# R^2 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# 그래프 이미지 파일로 저장\n",
     "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
