--- a/20240715_cubic.ipynb
+++ b/20240715_cubic.ipynb
@@ -63,6 +63,117 @@
     "high_r2_models = r2_matrix[r2_matrix >= 0.90].stack().reset_index()\n",
     "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
+    "row = high_r2_models.iloc[12]\n",
+    "independent_var = row['Independent_Var']\n",
+    "dependent_var = row['Dependent_Var']\n",
+    "r2 = row['R2']\n",
+    "\n",
+    "# 결측치 제거\n",
+    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
+    "\n",
+    "X = valid_data[[independent_var]]\n",
+    "y = valid_data[dependent_var]\n",
+    "\n",
+    "# 다항식 특징 변환기 생성 (차수 2로 설정)\n",
+    "poly = PolynomialFeatures(degree=3)\n",
+    "X_poly = poly.fit_transform(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 학습 및 예측\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_poly, y)\n",
+    "\n",
+    "# 계수와 절편 출력\n",
+    "print(\"다항식 계수:\", model.coef_)\n",
+    "print(\"절편:\", model.intercept_)\n",
+    "\n",
+    "X_fit = np.arange(1.5, 4.5, 0.01)[:, np.newaxis]\n",
+    "y_pred = model.predict(poly.fit_transform(X_fit))\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot(X_fit, y_pred, 'b-', lw=2)\n",
+    "plt.scatter(X, y, color='red', alpha=0.5)\n",
+    "plt.xlabel(f'{independent_var}')\n",
+    "plt.ylabel(f'{dependent_var}')\n",
+    "plt.title(f'Cubic Correlation: {independent_var}__{dependent_var}')\n",
+    "\n",
+    "# 다항식 계수를 이용하여 수식 생성\n",
+    "intercept = model.intercept_\n",
+    "coef = model.coef_\n",
+    "\n",
+    "# LaTeX 수식 생성\n",
+    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x {coef[2]:.2f} + {coef[3]:.2f}x^2$'\n",
+    "\n",
+    "# 수식을 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# R^2, MAE 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename(f'Quadratic Correlation between {independent_var}__{dependent_var}.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 예측\n",
+    "y_pred = model.predict(X_poly)\n",
+    "\n",
+    "# Convert it to kcal/mole\n",
+    "mae = MAE(y, y_pred)*23.06\n",
+    "print(f'MAE: {mae} (kcal/mol)')\n",
+    "\n",
+    "# 실제 값과 예측치 저장\n",
+    "result_df = pd.DataFrame({\n",
+    "    'Real': y,\n",
+    "    'Predict': y_pred\n",
+    "})\n",
+    "\n",
+    "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
+    "result_df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
+    "plt.scatter(y, y_pred, color='red', alpha=0.5)\n",
+    "plt.xlabel(f'Actual values of {dependent_var}')\n",
+    "plt.ylabel(f'Predicted values of {dependent_var}')\n",
+    "plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "\n",
+    "# R^2 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()"
+   ]
   }
  ],
  "metadata": {
