--- a/20240710_quadratic.ipynb
+++ b/20240710_quadratic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다항식 계수: [ 0.          1.86683734 -0.19292414]\n",
+      "절편: -1.6431254914398936\n"
+     ]
+    }
+   ],
    "source": [
     "# 모델 학습 및 예측\n",
     "model = LinearRegression()\n",
     "model.fit(X_poly, y)\n",
+    "\n",
+    "# 계수와 절편 출력\n",
+    "print(\"다항식 계수:\", model.coef_)\n",
+    "print(\"절편:\", model.intercept_)\n",
     "\n",
     "X_fit = np.arange(1.5, 4.5, 0.01)[:, np.newaxis]\n",
     "y_pred = model.predict(poly.fit_transform(X_fit))\n",
@@ -107,6 +120,16 @@
     "plt.xlabel(f'{independent_var}')\n",
     "plt.ylabel(f'{dependent_var}')\n",
     "plt.title(f'Quadratic Correlation: {independent_var}__{dependent_var}')\n",
+    "\n",
+    "# 다항식 계수를 이용하여 수식 생성\n",
+    "intercept = model.intercept_\n",
+    "coef = model.coef_\n",
+    "\n",
+    "# LaTeX 수식 생성\n",
+    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x {coef[2]:.2f}x^2$'\n",
+    "\n",
+    "# 수식을 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# R^2, MAE 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
@@ -135,25 +158,7 @@
     }
    ],
    "source": [
-    "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[12]\n",
-    "independent_var = row['Independent_Var']\n",
-    "dependent_var = row['Dependent_Var']\n",
-    "r2 = row['R2']\n",
-    "\n",
-    "# 결측치 제거\n",
-    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
-    "\n",
-    "X = valid_data[[independent_var]]\n",
-    "y = valid_data[dependent_var]\n",
-    "\n",
-    "# 다항식 특징 변환기 생성 (차수 2로 설정)\n",
-    "poly = PolynomialFeatures(degree=2)\n",
-    "X_poly = poly.fit_transform(X)\n",
-    "\n",
-    "# 모델 학습 및 예측\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_poly, y)\n",
+    "# 모델 예측\n",
     "y_pred = model.predict(X_poly)\n",
     "\n",
     "# Convert it to kcal/mole\n",
