--- a/20240703_linear.ipynb
+++ b/20240703_linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,15 @@
     "            r2 = r2_score(y, y_pred)\n",
     "            r2_matrix.loc[var, dependent_var] = r2\n",
     "        else:\n",
-    "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n"
+    "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n",
+    "\n",
+    "# r2_matrix를 CSV 파일로 저장\n",
+    "output_file_path = '20240703_linear_r2.csv'  # 저장할 파일 경로\n",
+    "r2_matrix.to_csv(output_file_path)\n",
+    "\n",
+    "# R^2 값이 0.9 이상인 모델 찾기\n",
+    "high_r2_models = r2_matrix[r2_matrix >= 0.90].stack().reset_index()\n",
+    "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n"
    ]
   },
   {
@@ -51,14 +59,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# r2_matrix를 CSV 파일로 저장\n",
-    "output_file_path = '20240703_linear_r2.csv'  # 저장할 파일 경로\n",
-    "r2_matrix.to_csv(output_file_path)\n",
-    "\n",
-    "# R^2 값이 0.9 이상인 모델 찾기\n",
-    "high_r2_models = r2_matrix[r2_matrix >= 0.90].stack().reset_index()\n",
-    "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n",
-    "\n",
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
     "for index, row in high_r2_models.iterrows():\n",
     "    independent_var = row['Independent_Var']\n",
