--- a/20240703_linear.ipynb
+++ b/20240703_linear.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score \n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_absolute_error as MAE\n",
+    "from sklearn.metrics import mean_squared_error as MSE\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "\n",
@@ -44,10 +46,6 @@
     "        else:\n",
     "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n",
     "\n",
-    "# r2_matrix를 CSV 파일로 저장\n",
-    "output_file_path = '20240703_linear_r2.csv'  # 저장할 파일 경로\n",
-    "r2_matrix.to_csv(output_file_path)\n",
-    "\n",
     "# R^2 값이 0.9 이상인 모델 찾기\n",
     "high_r2_models = r2_matrix[r2_matrix >= 0.90].stack().reset_index()\n",
     "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n"
@@ -55,57 +53,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.849327095773933\n"
+     ]
+    }
+   ],
    "source": [
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "for index, row in high_r2_models.iterrows():\n",
-    "    independent_var = row['Independent_Var']\n",
-    "    dependent_var = row['Dependent_Var']\n",
-    "    r2 = row['R2']\n",
-    "    \n",
-    "    # 결측치 제거\n",
-    "    valid_data = df[[independent_var, dependent_var]].dropna()\n",
-    "    \n",
-    "    X = valid_data[[independent_var]]\n",
-    "    y = valid_data[dependent_var]\n",
-    "    \n",
-    "    # 모델 학습 및 예측\n",
-    "    model = LinearRegression()\n",
-    "    model.fit(X, y)\n",
-    "    y_pred = model.predict(X)\n",
-    "    \n",
-    "    # 실제 값과 예측치 저장\n",
-    "    result_df = pd.DataFrame({\n",
-    "        'Real': y,\n",
-    "        'Predict': y_pred\n",
-    "    })\n",
-    "    \n",
-    "    # 파일 이름에서 유효하지 않은 문자 제거\n",
-    "    def sanitize_filename(filename):\n",
-    "        return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "row = high_r2_models.iloc[3]\n",
+    "independent_var = row['Independent_Var']\n",
+    "dependent_var = row['Dependent_Var']\n",
+    "r2 = row['R2']\n",
     "\n",
-    "    csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
-    "    result_df.to_csv(csv_filename, index=False)\n",
-    "    \n",
+    "# 결측치 제거\n",
+    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
     "\n",
-    "    # 그래프 생성\n",
-    "    plt.figure()\n",
-    "    plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
-    "    plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
-    "    plt.xlabel(f'Actual values of {dependent_var}')\n",
-    "    plt.ylabel(f'Predicted values of {dependent_var}')\n",
-    "    plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "X = valid_data[[independent_var]]\n",
+    "y = valid_data[dependent_var]\n",
     "\n",
-    "    # R^2 값 그래프에 추가\n",
-    "    plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "std_dev = y.std(ddof=0)\n",
+    "std_dev2 = y.std(ddof=0)*23.06\n",
+    "print(std_dev)\n",
     "\n",
-    "    # 그래프 이미지 파일로 저장\n",
-    "    img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
-    "    plt.savefig(img_filename)\n",
-    "    plt.close()\n",
-    "    "
+    "# 모델 학습 및 예측\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "y_pred = model.predict(X)\n",
+    "\n",
+    "mae = MAE(y, y_pred)\n",
+    "mae2 = MAE(y, y_pred)*23.06\n",
+    "rmse = np.sqrt(MSE(y, y_pred))\n",
+    "rmse2 = np.sqrt(MSE(y, y_pred))*23.06\n",
+    "\n",
+    "# 실제 값과 예측치 저장\n",
+    "result_df = pd.DataFrame({\n",
+    "    'Real': y,\n",
+    "    'Predict': y_pred\n",
+    "})\n",
+    "\n",
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
+    "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
+    "result_df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
+    "plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
+    "plt.xlabel(f'Actual values of {dependent_var}')\n",
+    "plt.ylabel(f'Predicted values of {dependent_var}')\n",
+    "plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "\n",
+    "# R^2 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (D)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (D)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.510058610582067\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
+    "row = high_r2_models.iloc[10]\n",
+    "independent_var = row['Independent_Var']\n",
+    "dependent_var = row['Dependent_Var']\n",
+    "r2 = row['R2']\n",
+    "\n",
+    "# 결측치 제거\n",
+    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
+    "\n",
+    "X = valid_data[[independent_var]]\n",
+    "y = valid_data[dependent_var]\n",
+    "\n",
+    "std_dev = y.std(ddof=0)\n",
+    "std_dev2 = y.std(ddof=0)*23.06\n",
+    "print(std_dev2)\n",
+    "\n",
+    "# 모델 학습 및 예측\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "y_pred = model.predict(X)\n",
+    "\n",
+    "mae = MAE(y, y_pred)\n",
+    "mae2 = MAE(y, y_pred)*23.06\n",
+    "rmse = np.sqrt(MSE(y, y_pred))\n",
+    "rmse2 = np.sqrt(MSE(y, y_pred))*23.06\n",
+    "\n",
+    "# 실제 값과 예측치 저장\n",
+    "result_df = pd.DataFrame({\n",
+    "    'Real': y,\n",
+    "    'Predict': y_pred\n",
+    "})\n",
+    "\n",
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
+    "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
+    "result_df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
+    "plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
+    "plt.xlabel(f'Actual values of {dependent_var}')\n",
+    "plt.ylabel(f'Predicted values of {dependent_var}')\n",
+    "plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "\n",
+    "# R^2 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()\n"
    ]
   }
  ],
