--- a/20240719_scatter_linear.ipynb
+++ b/20240719_scatter_linear.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_absolute_error as MAE\n",
@@ -37,16 +36,13 @@
     "        y = valid_data[dependent_var]\n",
     "        \n",
     "        if len(valid_data) > 0:  # 유효한 데이터가 있는지 확인\n",
-    "            # 다항식 특징 변환기 생성 (차수 2로 설정)\n",
-    "            poly = PolynomialFeatures(degree=2)\n",
-    "            X_poly = poly.fit_transform(X)\n",
     "            \n",
     "            # 모델 훈련\n",
     "            model = LinearRegression()\n",
-    "            model.fit(X_poly, y)\n",
+    "            model.fit(X, y)\n",
     "            \n",
     "            # 예측\n",
-    "            y_pred = model.predict(X_poly)\n",
+    "            y_pred = model.predict(X)\n",
     "            \n",
     "            # R^2 계산\n",
     "            r2 = r2_score(y, y_pred)\n",
@@ -62,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +67,7 @@
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[10]\n",
+    "row = high_r2_models.iloc[4]\n",
     "independent_var = row['Independent_Var']\n",
     "dependent_var = row['Dependent_Var']\n",
     "r2 = row['R2']\n",
@@ -82,16 +78,12 @@
     "X = valid_data[[independent_var]].values\n",
     "y = valid_data[dependent_var].values\n",
     "\n",
-    "# 다항식 특징 변환기 생성 (차수 2로 설정)\n",
-    "poly = PolynomialFeatures(degree=2)\n",
-    "X_poly = poly.fit_transform(X)\n",
-    "\n",
     "# 모델 학습 및 예측\n",
     "model = LinearRegression()\n",
-    "model.fit(X_poly, y)\n",
+    "model.fit(X, y)\n",
     "\n",
     "X_fit = np.linspace(X.min(), X.max(), 100).reshape(-1, 1)\n",
-    "y_pred = model.predict(poly.fit_transform(X_fit))\n",
+    "y_pred = model.predict(X_fit)\n",
     "\n",
     "# 그래프 생성\n",
     "plt.figure()\n",
@@ -99,14 +91,14 @@
     "plt.scatter(X, y, color='orange', alpha=0.5)\n",
     "plt.xlabel(f'{independent_var}')\n",
     "plt.ylabel(f'{dependent_var}')\n",
-    "plt.title(f'Quadratic Correlation: {independent_var}__{dependent_var}')\n",
+    "plt.title(f'Linear Correlation: {independent_var}__{dependent_var}')\n",
     "\n",
     "# 다항식 계수를 이용하여 수식 생성\n",
     "intercept = model.intercept_\n",
     "coef = model.coef_\n",
     "\n",
     "# LaTeX 수식 생성\n",
-    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x + {coef[2]:.2f}x^2$'\n",
+    "equation = f'$y = {intercept:.2f} + {coef[0]:.2f}x$'\n",
     "\n",
     "# 수식을 그래프에 추가\n",
     "plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
