--- a/20240703_linear.ipynb
+++ b/20240703_linear.ipynb
@@ -53,20 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.849327095773933\n"
+      "9.547747300558362\n"
      ]
     }
    ],
    "source": [
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[3]\n",
+    "row = high_r2_models.iloc[2]\n",
     "independent_var = row['Independent_Var']\n",
     "dependent_var = row['Dependent_Var']\n",
     "r2 = row['R2']\n",
@@ -115,8 +115,8 @@
     "\n",
     "# R^2 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
-    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (D)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
-    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (D)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# 그래프 이미지 파일로 저장\n",
     "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
@@ -126,20 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.510058610582067\n"
+      "9.647570414787422\n"
      ]
     }
    ],
    "source": [
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[10]\n",
+    "row = high_r2_models.iloc[8]\n",
     "independent_var = row['Independent_Var']\n",
     "dependent_var = row['Dependent_Var']\n",
     "r2 = row['R2']\n",
