--- a/20240719_scatter_quadratic.ipynb
+++ b/20240719_scatter_quadratic.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[10]\n",
+    "row = high_r2_models.iloc[12]\n",
     "independent_var = row['Independent_Var']\n",
     "dependent_var = row['Dependent_Var']\n",
     "r2 = row['R2']\n",
@@ -106,7 +106,7 @@
     "coef = model.coef_\n",
     "\n",
     "# LaTeX 수식 생성\n",
-    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x + {coef[2]:.2f}x^2$'\n",
+    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x {coef[2]:.2f}x^2$'\n",
     "\n",
     "# 수식을 그래프에 추가\n",
     "plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
