--- a/20240710_quadratic.ipynb
+++ b/20240710_quadratic.ipynb
@@ -12,6 +12,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_absolute_error as MAE\n",
+    "from sklearn.metrics import mean_squared_error as MSE\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "\n",
@@ -55,10 +56,6 @@
     "        else:\n",
     "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n",
     "\n",
-    "# r2_matrix를 CSV 파일로 저장\n",
-    "output_file_path = '20240710_quadratic_r2.csv'  # 저장할 파일 경로\n",
-    "r2_matrix.to_csv(output_file_path)\n",
-    "\n",
     "# R^2 값이 0.9 이상인 모델 찾기\n",
     "high_r2_models = r2_matrix[r2_matrix >= 0.90].stack().reset_index()\n",
     "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n"
@@ -66,10 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.953646868632461\n"
+     ]
+    }
+   ],
    "source": [
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
     "row = high_r2_models.iloc[12]\n",
     "independent_var = row['Independent_Var']\n",
@@ -82,6 +91,10 @@
     "X = valid_data[[independent_var]]\n",
     "y = valid_data[dependent_var]\n",
     "\n",
+    "std_dev = y.std(ddof=0)\n",
+    "std_dev2 = y.std(ddof=0)*23.06\n",
+    "print(std_dev2)\n",
+    "\n",
     "# 다항식 특징 변환기 생성 (차수 2로 설정)\n",
     "poly = PolynomialFeatures(degree=2)\n",
     "X_poly = poly.fit_transform(X)\n"
@@ -89,28 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "다항식 계수: [ 0.          1.86683734 -0.19292414]\n",
-      "절편: -1.6431254914398936\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 모델 학습 및 예측\n",
     "model = LinearRegression()\n",
     "model.fit(X_poly, y)\n",
     "\n",
-    "# 계수와 절편 출력\n",
-    "print(\"다항식 계수:\", model.coef_)\n",
-    "print(\"절편:\", model.intercept_)\n",
-    "\n",
-    "X_fit = np.arange(1.5, 4.5, 0.01)[:, np.newaxis]\n",
+    "X_fit = np.linspace(X.min(), X.max(), 100).reshape(-1, 1)\n",
     "y_pred = model.predict(poly.fit_transform(X_fit))\n",
     "\n",
     "# 그래프 생성\n",
@@ -134,10 +134,6 @@
     "# R^2, MAE 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
-    "# 파일 이름에서 유효하지 않은 문자 제거\n",
-    "def sanitize_filename(filename):\n",
-    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
-    "\n",
     "# 그래프 이미지 파일로 저장\n",
     "img_filename = sanitize_filename(f'Quadratic Correlation between {independent_var}__{dependent_var}.png')\n",
     "plt.savefig(img_filename)\n",
@@ -146,24 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE: 2.0753433522689693 (kcal/mol)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 모델 예측\n",
     "y_pred = model.predict(X_poly)\n",
     "\n",
-    "# Convert it to kcal/mole\n",
-    "mae = MAE(y, y_pred)*23.06\n",
-    "print(f'MAE: {mae} (kcal/mol)')\n",
+    "mae = MAE(y, y_pred)\n",
+    "mae2 = MAE(y, y_pred)*23.06\n",
+    "rmse = np.sqrt(MSE(y, y_pred))\n",
+    "rmse2 = np.sqrt(MSE(y, y_pred))*23.06\n",
     "\n",
     "# 실제 값과 예측치 저장\n",
     "result_df = pd.DataFrame({\n",
@@ -184,7 +173,8 @@
     "\n",
     "# R^2 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
-    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# 그래프 이미지 파일로 저장\n",
     "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
