--- a/20240719_scatter_quartic.ipynb
+++ b/20240719_scatter_quartic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,14 @@
     "        else:\n",
     "            r2_matrix.loc[var, dependent_var] = np.nan  # 유효한 데이터가 없으면 NaN으로 설정\n",
     "\n",
-    "# r2_matrix를 엑셀 파일로 저장\n",
-    "output_file_path = '20240710_quartic_r2.xlsx'  # 저장할 파일 경로\n",
-    "r2_matrix.to_excel(output_file_path)\n",
-    "\n",
     "# R^2 값이 0.9 이상인 모델 찾기\n",
-    "high_r2_models = r2_matrix[r2_matrix >= 0.85].stack().reset_index()\n",
+    "high_r2_models = r2_matrix[r2_matrix >= 0.9].stack().reset_index()\n",
     "high_r2_models.columns = ['Independent_Var', 'Dependent_Var', 'R2']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,50 +71,53 @@
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
     "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "for index, row in high_r2_models.iterrows():\n",
-    "    independent_var = row['Independent_Var']\n",
-    "    dependent_var = row['Dependent_Var']\n",
-    "    r2 = row['R2']\n",
+    "row = high_r2_models.iloc[5]\n",
+    "independent_var = row['Independent_Var']\n",
+    "dependent_var = row['Dependent_Var']\n",
+    "r2 = row['R2']\n",
     "\n",
-    "    # 결측치 제거\n",
-    "    valid_data = df[[independent_var, dependent_var]].dropna()\n",
-    "    \n",
-    "    X = valid_data[[independent_var]]\n",
-    "    y = valid_data[dependent_var]\n",
+    "# 결측치 제거\n",
+    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
     "\n",
-    "    # 다항식 특징 변환기 생성 (차수 2로 설정)\n",
-    "    poly = PolynomialFeatures(degree=4)\n",
-    "    X_poly = poly.fit_transform(X)\n",
-    "    \n",
-    "    # 모델 학습 및 예측\n",
-    "    model = LinearRegression()\n",
-    "    model.fit(X_poly, y)\n",
+    "X = valid_data[[independent_var]]\n",
+    "y = valid_data[dependent_var]\n",
     "\n",
-    "    # 그래프 생성\n",
-    "    plt.figure()\n",
-    "    plt.scatter(X, y, color='red', alpha=0.5)\n",
-    "    plt.xlabel(f'{independent_var}')\n",
-    "    plt.ylabel(f'{dependent_var}')\n",
-    "    plt.title(f'Quartic Correlation: {independent_var}__{dependent_var}')\n",
+    "# 다항식 특징 변환기 생성 (차수 2로 설정)\n",
+    "poly = PolynomialFeatures(degree=4)\n",
+    "X_poly = poly.fit_transform(X)\n",
     "\n",
-    "    # 다항식 계수를 이용하여 수식 생성\n",
-    "    intercept = model.intercept_\n",
-    "    coef = model.coef_\n",
+    "# 모델 학습 및 예측\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_poly, y)\n",
     "\n",
-    "    # LaTeX 수식 생성\n",
-    "    equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x + {coef[2]:.2f}x^2 + {coef[3]:.2f}x^3 + {coef[4]:.2f}x^4$'\n",
+    "X_fit = np.linspace(X.min(), X.max(), 100).reshape(-1, 1)\n",
+    "y_pred = model.predict(poly.fit_transform(X_fit))\n",
     "\n",
-    "    # 수식을 그래프에 추가\n",
-    "    plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot(X_fit, y_pred, 'b-', lw=2)\n",
+    "plt.scatter(X, y, color='orange', alpha=0.5)\n",
+    "plt.xlabel(f'{independent_var}')\n",
+    "plt.ylabel(f'{dependent_var}')\n",
+    "plt.title(f'Quartic Correlation: {independent_var}__{dependent_var}')\n",
     "\n",
-    "    # R^2 값 그래프에 추가\n",
-    "    plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "# 다항식 계수를 이용하여 수식 생성\n",
+    "intercept = model.intercept_\n",
+    "coef = model.coef_\n",
     "\n",
-    "    # 그래프 이미지 파일로 저장\n",
-    "    img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
-    "    plt.savefig(img_filename)\n",
-    "    plt.close()\n",
-    "    "
+    "# LaTeX 수식 생성\n",
+    "equation = f'$y = {intercept:.2f} + {coef[1]:.2f}x {coef[2]:.2f}x^2 + {coef[3]:.2f}x^3 {coef[4]:.2f}x^4$'\n",
+    "\n",
+    "# 수식을 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.90, s=equation, fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# R^2 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()\n"
    ]
   }
  ],
