--- a/20240726_multiple_regression.ipynb
+++ b/20240726_multiple_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,26 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'independent_var' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m valid_data \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m----> 3\u001b[0m X \u001b[38;5;241m=\u001b[39m valid_data[[independent_var]]\n\u001b[1;32m      4\u001b[0m y \u001b[38;5;241m=\u001b[39m valid_data[dependent_var]\n\u001b[1;32m      6\u001b[0m std_dev \u001b[38;5;241m=\u001b[39m y\u001b[38;5;241m.\u001b[39mstd(ddof\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'independent_var' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.175970727742081\n"
      ]
     }
    ],
    "source": [
-    "valid_data = df.dropna()\n",
+    "# 결측값 제거\n",
+    "valid_data = df[['adiabatic_S1-S0 (kcal/mol)', 'lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']].dropna()\n",
     "\n",
-    "y = df['adiabatic_S1-S0 (kcal/mol)']\n",
-    "X = df.columns.difference([y])\n",
+    "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
+    "X = valid_data[['lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']]\n",
+    "y = valid_data['adiabatic_S1-S0 (kcal/mol)']\n",
     "\n",
     "std_dev = y.std(ddof=0)\n",
     "std_dev2 = y.std(ddof=0)*23.06\n",
@@ -52,6 +50,7 @@
     "\n",
     "y_pred = model.predict(X)\n",
     "\n",
+    "r2 = r2_score(y, y_pred)\n",
     "mae = MAE(y, y_pred)\n",
     "mae2 = MAE(y, y_pred)*23.06\n",
     "rmse = np.sqrt(MSE(y, y_pred))\n",
@@ -67,7 +66,7 @@
     "def sanitize_filename(filename):\n",
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
-    "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
+    "csv_filename = sanitize_filename('Multiple Regression Adiabatic.csv')\n",
     "result_df.to_csv(csv_filename, index=False)\n",
     "\n",
     "\n",
@@ -75,9 +74,9 @@
     "plt.figure()\n",
     "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
     "plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
-    "plt.xlabel(f'Actual values of {dependent_var}')\n",
-    "plt.ylabel(f'Predicted values of {dependent_var}')\n",
-    "plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "plt.xlabel(f'Actual values of adiabatic_S1-S0 (kcal/mol)')\n",
+    "plt.ylabel(f'Predicted values of adiabatic_S1-S0 (kcal/mol)')\n",
+    "plt.title('Parity Plot of adiabatic_S1-S0 (kcal/mol)')\n",
     "\n",
     "# R^2 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
@@ -85,46 +84,42 @@
     "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# 그래프 이미지 파일로 저장\n",
-    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "img_filename = sanitize_filename('Multiple Regression Adiabatic.png')\n",
     "plt.savefig(img_filename)\n",
     "plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.647570414787422\n"
+      "6.328699694830372\n"
      ]
     }
    ],
    "source": [
-    "# 첫 번째 모델에 대해 CSV 파일과 그래프 저장\n",
-    "row = high_r2_models.iloc[8]\n",
-    "independent_var = row['Independent_Var']\n",
-    "dependent_var = row['Dependent_Var']\n",
-    "r2 = row['R2']\n",
+    "# 결측값 제거\n",
+    "valid_data = df[['reduction_S0 (kcal/mol)', 'lumo (eV)', '0-0_S1 (eV)', 'vertical_excitation_energy (eV)']].dropna()\n",
     "\n",
-    "# 결측치 제거\n",
-    "valid_data = df[[independent_var, dependent_var]].dropna()\n",
-    "\n",
-    "X = valid_data[[independent_var]]\n",
-    "y = valid_data[dependent_var]\n",
+    "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
+    "y = valid_data['reduction_S0 (kcal/mol)']\n",
+    "X = valid_data[['lumo (eV)', 'vertical_excitation_energy (eV)', '0-0_S1 (eV)']]\n",
     "\n",
     "std_dev = y.std(ddof=0)\n",
     "std_dev2 = y.std(ddof=0)*23.06\n",
-    "print(std_dev2)\n",
+    "print(std_dev)\n",
     "\n",
-    "# 모델 학습 및 예측\n",
     "model = LinearRegression()\n",
     "model.fit(X, y)\n",
+    "\n",
     "y_pred = model.predict(X)\n",
     "\n",
+    "r2 = r2_score(y, y_pred)\n",
     "mae = MAE(y, y_pred)\n",
     "mae2 = MAE(y, y_pred)*23.06\n",
     "rmse = np.sqrt(MSE(y, y_pred))\n",
@@ -140,7 +135,7 @@
     "def sanitize_filename(filename):\n",
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
     "\n",
-    "csv_filename = sanitize_filename(f'{independent_var}__{dependent_var}.csv')\n",
+    "csv_filename = sanitize_filename('Multiple Regression Reduction.csv')\n",
     "result_df.to_csv(csv_filename, index=False)\n",
     "\n",
     "\n",
@@ -148,17 +143,78 @@
     "plt.figure()\n",
     "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
     "plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
-    "plt.xlabel(f'Actual values of {dependent_var}')\n",
-    "plt.ylabel(f'Predicted values of {dependent_var}')\n",
-    "plt.title(f'Model: {independent_var}__{dependent_var}')\n",
+    "plt.xlabel(f'Actual values of reduction_S0 (kcal/mol)')\n",
+    "plt.ylabel(f'Predicted values of reduction_S0 (kcal/mol)')\n",
+    "plt.title('Parity Plot of reduction_S0 (kcal/mol)')\n",
     "\n",
     "# R^2 값 그래프에 추가\n",
     "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
-    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
-    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse2:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
     "\n",
     "# 그래프 이미지 파일로 저장\n",
-    "img_filename = sanitize_filename(f'{independent_var}__{dependent_var}.png')\n",
+    "img_filename = sanitize_filename('Multiple Regression Reduction.png')\n",
+    "plt.savefig(img_filename)\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 결측값 제거\n",
+    "valid_data = df[['oxidation_S0 (kcal/mol)', 'homo (eV)', 'lumo (eV)', '0-0_S1 (eV)']].dropna()\n",
+    "\n",
+    "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
+    "y = valid_data['oxidation_S0 (kcal/mol)']\n",
+    "X = valid_data[['homo (eV)', 'lumo (eV)', '0-0_S1 (eV)']]\n",
+    "\n",
+    "std_dev = y.std(ddof=0)\n",
+    "std_dev2 = y.std(ddof=0)*23.06\n",
+    "print(std_dev)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "y_pred = model.predict(X)\n",
+    "\n",
+    "r2 = r2_score(y, y_pred)\n",
+    "mae = MAE(y, y_pred)\n",
+    "mae2 = MAE(y, y_pred)*23.06\n",
+    "rmse = np.sqrt(MSE(y, y_pred))\n",
+    "rmse2 = np.sqrt(MSE(y, y_pred))*23.06\n",
+    "\n",
+    "# 실제 값과 예측치 저장\n",
+    "result_df = pd.DataFrame({\n",
+    "    'Real': y,\n",
+    "    'Predict': y_pred\n",
+    "})\n",
+    "\n",
+    "# 파일 이름에서 유효하지 않은 문자 제거\n",
+    "def sanitize_filename(filename):\n",
+    "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", filename)\n",
+    "\n",
+    "csv_filename = sanitize_filename('Multiple Regression Oxidation.csv')\n",
+    "result_df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure()\n",
+    "plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k-', lw=2)\n",
+    "plt.scatter(y, y_pred, color = 'red', alpha=0.5)\n",
+    "plt.xlabel(f'Actual values of oxidation_S0 (kcal/mol)')\n",
+    "plt.ylabel(f'Predicted values of oxidation_S0 (kcal/mol)')\n",
+    "plt.title('Parity Plot of oxidation_S0 (kcal/mol)')\n",
+    "\n",
+    "# R^2 값 그래프에 추가\n",
+    "plt.text(x=0.05, y=0.95, s=f'$R^2 = {r2:.4f}$', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.90, s=f'MAE = {mae:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "plt.text(x=0.05, y=0.85, s=f'RMSE = {rmse:.4f} (kcal/mol)', fontsize=12, ha='left', va='top', transform=plt.gca().transAxes)\n",
+    "\n",
+    "# 그래프 이미지 파일로 저장\n",
+    "img_filename = sanitize_filename('Multiple Regression Oxidation.png')\n",
     "plt.savefig(img_filename)\n",
     "plt.close()\n"
    ]
