--- a/20240726_multiple_regression.ipynb
+++ b/20240726_multiple_regression.ipynb
@@ -22,23 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.175970727742081\n"
+      "9.152405944652418\n"
      ]
     }
    ],
    "source": [
     "# 결측값 제거\n",
-    "valid_data = df[['adiabatic_S1-S0 (kcal/mol)', 'lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']].dropna()\n",
+    "valid_data = df[['adiabatic_S1-S0 (kcal/mol)', 'vertical_excitation_energy (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_T1 (eV)', 'reduction_S0 (kcal/mol)']].dropna()\n",
     "\n",
     "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
-    "X = valid_data[['lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']]\n",
+    "X = valid_data[['vertical_excitation_energy (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_T1 (eV)', 'reduction_S0 (kcal/mol)']]\n",
     "y = valid_data['adiabatic_S1-S0 (kcal/mol)']\n",
     "\n",
     "std_dev = y.std(ddof=0)\n",
@@ -91,24 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.328699694830372\n"
+      "6.325547264995044\n"
      ]
     }
    ],
    "source": [
     "# 결측값 제거\n",
-    "valid_data = df[['reduction_S0 (kcal/mol)', 'lumo (eV)', '0-0_S1 (eV)', 'vertical_excitation_energy (eV)']].dropna()\n",
+    "valid_data = df[['reduction_S0 (kcal/mol)', 'homo (eV)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']].dropna()\n",
     "\n",
     "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
     "y = valid_data['reduction_S0 (kcal/mol)']\n",
-    "X = valid_data[['lumo (eV)', 'vertical_excitation_energy (eV)', '0-0_S1 (eV)']]\n",
+    "X = valid_data[['homo (eV)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']]\n",
     "\n",
     "std_dev = y.std(ddof=0)\n",
     "std_dev2 = y.std(ddof=0)*23.06\n",
@@ -160,16 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.161931325309032\n"
+     ]
+    }
+   ],
    "source": [
     "# 결측값 제거\n",
-    "valid_data = df[['oxidation_S0 (kcal/mol)', 'homo (eV)', 'lumo (eV)', '0-0_S1 (eV)']].dropna()\n",
+    "valid_data = df[['oxidation_S0 (kcal/mol)', 'lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']].dropna()\n",
     "\n",
     "# 독립 변수와 종속 변수 업데이트 (결측값 제거된 데이터 사용)\n",
     "y = valid_data['oxidation_S0 (kcal/mol)']\n",
-    "X = valid_data[['homo (eV)', 'lumo (eV)', '0-0_S1 (eV)']]\n",
+    "X = valid_data[['lumo (eV)', 'dipole_moment_norm_S1 (D)', 'dipole_moment_norm_T1 (D)', '0-0_S1 (eV)', 'adiabatic_T1-S0 (kcal/mol)']]\n",
     "\n",
     "std_dev = y.std(ddof=0)\n",
     "std_dev2 = y.std(ddof=0)*23.06\n",
@@ -217,6 +225,29 @@
     "img_filename = sanitize_filename('Multiple Regression Oxidation.png')\n",
     "plt.savefig(img_filename)\n",
     "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dipole_moment_norm_S0 (D)    3.89232\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측값 제거\n",
+    "valid_data = df[['dipole_moment_norm_S0 (D)']].dropna()\n",
+    "\n",
+    "std_dev = valid_data.std(ddof=0)\n",
+    "std_dev2 = valid_data.std(ddof=0)*23.06\n",
+    "print(std_dev)"
    ]
   }
  ],
